Added JSON format discovery over http.

--- a/src/webservice/CMakeLists.txt
+++ b/src/webservice/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(
     decof2-webservice
     http_reply.cpp
+    json_visitor.cpp
     request_parser.cpp
     webservice.cpp
     xml_visitor.cpp
