Added some header files to CMakeLists.txt files. Generated code is produced in build directory.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,13 +1,19 @@
 add_library(
     decof2-core
     client_context.cpp
+    connection.h
+    errors.h
     event.cpp
     exceptions.cpp
     node.cpp
     object.cpp
     object_dictionary.cpp
     object_visitor.cpp
+    object_visitor.h
     regular_timer.cpp
+    regular_timer.h
     tcp_connection.cpp
+    tcp_connection.h
     tcp_connection_manager.cpp
+    tcp_connection_manager.h
 )
