--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
-compiler: gcc
-install: sudo apt-get install libboost-all-dev flexc++ bisonc++
+compiler: clang
+install: sudo apt-get install libboost-all-dev "flexc++" "bisonc++"
 before_script: mkdir build && cd build
 script: cmake .. && make
