--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,18 @@
 language: cpp
+
 compiler: gcc
-install: sudo apt-get install libboost-all-dev doxygen
+
+before_install:
+# We need this line to have g++-4.9 available in apt
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install:
+  - sudo apt-get install libboost-all-dev doxygen
+  - sudo apt-get install -qq gcc-4.9 g++-4.9 
+# We want to compile with g++-4.9 when rather than the default g++
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+
 before_script: mkdir build && cd build
+
 script: cmake .. && make
