--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,12 @@ language: cpp
 compiler: gcc
 
 before_install:
-# We need this line to have g++-4.9 available in apt
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # for gcc-4.9
+  - sudo add-apt-repository -y ppa:boost-latest/ppa # for boost-1.54
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get install libboost-all-dev doxygen
-  - sudo apt-get install -qq gcc-4.9 g++-4.9 
+  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 doxygen
 # We want to compile with g++-4.9 when rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
 
