Added code coverage metric configuration for coveralls.io.

--- a/src/asio_tick/CMakeLists.txt
+++ b/src/asio_tick/CMakeLists.txt
@@ -1,10 +1,26 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
-add_library(
-    decof2-asio-tick
+set(
+    DECOF2_ASIO_TICK_SRC
     asio_tick.cpp
     asio_tick.h
+)
+
+# Standard DeCoF2 ASIO Tick library
+add_library(
+    decof2-asio-tick
+    ${DECOF2_ASIO_TICK_SRC}
 )
 target_link_libraries(
     decof2-asio-tick
     decof2-core
+)
+
+# DeCoF2 ASIO Tick library with coverage information
+add_library(
+    decof2-asio-tick-gcov
+    ${DECOF2_ASIO_TICK_SRC}
+)
+target_link_libraries(
+    decof2-asio-tick-gcov
+    decof2-core-gcov
 )
