--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: cpp
-
-compiler: gcc
-
+compiler:
+  - gcc
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # for gcc-4.9
   - sudo add-apt-repository -y ppa:boost-latest/ppa # for boost-1.54
   - sudo apt-get update -qq
-
 install:
-  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 doxygen
-# We want to compile with g++-4.9 when rather than the default g++
+  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 doxygen python-pip
+# We want to compile with g++-4.9 rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
-
-before_script: mkdir build && cd build
-
-script: cmake .. && make
+before_script:
+  - mkdir build && cd build
+script:
+  - cmake .. && make
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
