--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ compiler:
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # for gcc-4.9
   - sudo add-apt-repository -y ppa:boost-latest/ppa # for boost-1.54
-  - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x # for CMake > 2.8.7
+  - sudo add-apt-repository -y ppa:sschuberth/cmake-here # for CMake > 2.8.7
   - sudo apt-get update -qq
 install:
   - apt-cache show cmake
-  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 cmake=3.2.2-2ubuntu2 doxygen python-pip
+  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 cmake doxygen python-pip
 # We want to compile with g++-4.9 rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
 before_script:
