--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - sudo add-apt-repository -y ppa:boost-latest/ppa # for boost-1.54
   - sudo add-apt-repository -y ppa:sschuberth/cmake-here # for CMake > 2.8.7
   - sudo apt-get update -qq
+  - sudo pip install cpp-coveralls
 install:
   - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 cmake-data cmake doxygen python-pip
 # We want to compile with g++-4.9 rather than the default g++
