--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ before_install:
   - sudo add-apt-repository -y ppa:boost-latest/ppa # for boost-1.54
   - sudo add-apt-repository -y ppa:sschuberth/cmake-here # for CMake > 2.8.7
   - sudo apt-get update -qq
-  - sudo pip install cpp-coveralls
 install:
   - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 cmake-data cmake doxygen python-pip
 # We want to compile with g++-4.9 rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+  - sudo pip install cpp-coveralls
 before_script:
   - mkdir build && cd build
 script:
   - cmake .. && make && test/test
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - coveralls --exclude lib --exclude tests --gcov=gcov-4.9 --gcov-options '\-lp'
