--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ before_script:
 script:
   - cmake .. && make && test/test
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov=gcov-4.9 --gcov-options '\-lp'
+  - cd ..
+  - coveralls --gcov=gcov-4.9 --gcov-options '\-lp'
