--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
   - cmake .. && make && test/test
 after_success:
   - cd ..
-  - coveralls --gcov=gcov-4.9 --gcov-options '\-lp' --exclude build
+  - coveralls --include src --include include --gcov=gcov-4.9 --gcov-options '\-lp'
