Fixed bug in finding sub objects with custom separator.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(
     test
     test_main.cpp
     test_bencode_string_parser.cpp
+    test_object_dictionary.cpp
     test_parameter_access.cpp
     test_scgi_access.cpp
     test_scgi_response.cpp
