Renamed CLI access tests.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,8 +3,8 @@ add_executable(
     test
     test_main.cpp
     test_bencode_string_parser.cpp
+    test_cli_access.cpp
     test_object_dictionary.cpp
-    test_parameter_access.cpp
     test_scgi_access.cpp
     test_scgi_response.cpp
     test_scgi_parser.cpp
