Added parameter access type tests (read/write).

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(
     test_bencode_string_parser.cpp
     test_cli_access.cpp
     test_object_dictionary.cpp
+    test_parameter_access.cpp
     test_scgi_access.cpp
     test_scgi_response.cpp
     test_scgi_parser.cpp
