--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(
     test_cli_access.cpp
     test_object_dictionary.cpp
     test_parameter_access.cpp
+    test_parameter_observation.cpp
     test_scgi_access.cpp
     test_scgi_response.cpp
     test_scgi_parser.cpp
