--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -21,6 +21,7 @@ set(
 # Standard DeCoF2 CLI library
 add_library(
     decof2-cli
+    EXCLUDE_FROM_ALL
     ${DECOF2_CLI_SRC}
 )
 target_link_libraries(
@@ -31,6 +32,7 @@ target_link_libraries(
 # DeCoF2 CLI library with coverage information
 add_library(
     decof2-cli-gcov
+    EXCLUDE_FROM_ALL
     ${DECOF2_CLI_SRC}
 )
 target_link_libraries(
