--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 before_script:
   - mkdir build && cd build
 script:
-  - cmake .. && make example test_decof2 doc && test/test
+  - cmake .. && make example test_decof2 doc && test/test_decof2
 after_success:
   - cd ..
   - coveralls --include src --include include --gcov=gcov-4.9 --gcov-options '\-lp'
