Added decoupling of value updates from CLI pubsub connection updates.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -11,6 +11,8 @@ set(
     encoder.h
     pubsub_context.cpp
     pubsub_context.h
+    update_container.cpp
+    update_container.h
     visitor.cpp
     visitor.h
     scanner.h
