--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ before_build:
   - cd ..
   - mkdir build
   - cd build
-  - cmake %APPVEYOR_BUILD_FOLDER%
+  - cmake %APPVEYOR_BUILD_FOLDER% -DBOOST_LIBRARYDIR=C:\Libraries\boost_1_60_0
 
 build:
   parallel: true                # enable MSBuild parallel builds
