--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,14 @@
 # Build worker image (VM template)
 image: Visual Studio 2015
 
+platform: 
+  - x86
+
 before_build:
   - cd ..
   - mkdir build
   - cd build
-  - cmake %APPVEYOR_BUILD_FOLDER% -DBOOST_LIBRARYDIR=C:\Libraries\boost_1_60_0
+  - cmake %APPVEYOR_BUILD_FOLDER% -DBOOST_ROOT=C:\Libraries\boost_1_60_0 -DBOOST_LIBRARYDIR=C:\Libraries\boost_1_60_0\lib32-msvc-14.0
 
 build:
   parallel: true                # enable MSBuild parallel builds
