Added /Za compiler switch for MSVC builds for some files only.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -1,3 +1,12 @@
+if(MSVC)
+    # Enable alternative boolean operators
+    set_source_files_properties(
+        lex.cpp parse.cpp
+        PROPERTIES
+            COMPILE_FLAGS "/Za"
+    )
+endif()
+
 set(
     DECOF2_CLI_SRC
     lex.cpp
