Fixed Visual Studio Express 2015 compiler issues.

--- a/src/asio_tick/CMakeLists.txt
+++ b/src/asio_tick/CMakeLists.txt
@@ -25,21 +25,23 @@ target_link_libraries(
 )
 
 # DeCoF2 ASIO Tick library with coverage information
-add_library(
-    decof2-asio-tick-gcov
-    EXCLUDE_FROM_ALL
-    ${DECOF2_ASIO_TICK_SRC}
-)
-target_include_directories(
-    decof2-asio-tick-gcov
-    PUBLIC
-        ${Boost_INCLUDE_DIR}
-        ../../include
-        ../../include/decof
-    PRIVATE
-        ../core
-)
-target_link_libraries(
-    decof2-asio-tick-gcov
-    decof2-core-gcov
-)
+if(CMAKE_COMPILER_IS_GNUCXX)
+	add_library(
+		decof2-asio-tick-gcov
+		EXCLUDE_FROM_ALL
+		${DECOF2_ASIO_TICK_SRC}
+	)
+	target_include_directories(
+		decof2-asio-tick-gcov
+		PUBLIC
+			${Boost_INCLUDE_DIR}
+			../../include
+			../../include/decof
+		PRIVATE
+			../core
+	)
+	target_link_libraries(
+		decof2-asio-tick-gcov
+		decof2-core-gcov
+	)
+endif()
