Removed custom CMake variable DECOF2_LIBRARY_TYPE as the library type can be manipulated using CMake variable BUILD_SHARED_LIBS by client applications.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -30,7 +30,7 @@ set(
 
 # Standard DeCoF2 CLI library
 add_library(
-    decof2-cli ${DECOF2_LIBRARY_TYPE}
+    decof2-cli
     EXCLUDE_FROM_ALL
     ${DECOF2_CLI_SRC}
 )
