--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -17,7 +17,7 @@ set(
 
 # Standard DeCoF2 core library
 add_library(
-    decof2-core ${DECOF2_LIBRARY_TYPE}
+    decof2-core
     EXCLUDE_FROM_ALL
     ${DECOF2_CORE_SRC}
 )
