--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,4 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+*.~
+*.autosave
+*.user
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# Qt Creator user specific project files
-*.pro.user
-*.txt.user
