--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,28 @@
+dist: trusty
+
 language: cpp
+
 compiler:
   - gcc
+
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # for gcc-4.9
-  - sudo add-apt-repository -y ppa:boost-latest/ppa # for boost-1.54
-  - sudo add-apt-repository -y ppa:george-edison55/precise-backports # for CMake > 2.8.7
+  - sudo add-apt-repository -y ppa:h-rayflood/gcc-upper # for gcc-4.9
+  - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
+  - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x # for CMake > 2.8.7
   - sudo apt-get update -qq
+
 install:
-  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.54 cmake-data cmake doxygen python-pip
-# We want to compile with g++-4.9 rather than the default g++
+  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.58 cmake-data cmake doxygen python-pip
+  # We want to compile with g++-4.9 rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
   - sudo pip install cpp-coveralls
+
 before_script:
   - mkdir build && cd build
+
 script:
   - cmake .. && make example test_decof2 doc && test/test_decof2
+
 after_success:
   - cd ..
   - coveralls --include src --include include --gcov=gcov-4.9 --gcov-options '\-lp'
