--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
 before_install:
   - sudo add-apt-repository -y ppa:h-rayflood/gcc-upper # for gcc-4.9
   - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
-  - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x # for CMake > 2.8.7
+  # - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x # for CMake > 2.8.7
   - sudo apt-get update -qq
 
 install:
