--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ before_install:
   - sudo add-apt-repository -y ppa:h-rayflood/gcc-upper # for gcc-4.9
   - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
   # - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x # for CMake > 2.8.7
-  - sudo apt-get update -qq
+  - sudo apt-get update #-qq
 
 install:
-  - sudo apt-get install -qq gcc-4.9 g++-4.9 boost1.58 cmake-data cmake doxygen python-pip
+  - sudo apt-get install gcc-4.9 g++-4.9 boost1.58 cmake-data cmake doxygen python-pip # -qq
   # We want to compile with g++-4.9 rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
   - sudo pip install cpp-coveralls
