--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - sudo apt-get update #-qq
 
 install:
-  - sudo apt-get install g++ boost1.58 cmake-data cmake doxygen python-pip # -qq
+  - sudo apt-get install g++ libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake doxygen python-pip # -qq
   # We want to compile with g++-4.9 rather than the default g++
   # - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
   - sudo pip install cpp-coveralls
