--- a/.travis.yml
+++ b/.travis.yml
@@ -6,23 +6,20 @@ compiler:
   - gcc
 
 before_install:
-  # - sudo add-apt-repository -y ppa:h-rayflood/gcc-upper # for gcc-4.9
   - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
-  # - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x # for CMake > 2.8.7
-  - sudo apt-get update #-qq
+  - sudo apt-get update
 
 install:
-  - sudo apt-get install g++ libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake doxygen python-pip # -qq
-  # We want to compile with g++-4.9 rather than the default g++
-  # - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+  - sudo apt-get install g++ libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake python-pip
   - sudo pip install cpp-coveralls
 
 before_script:
   - mkdir build && cd build
 
 script:
-  - cmake .. && make example test_decof2 doc && test/test_decof2
+  - cmake .. && make -j`nproc` example test_decof2 && test/test_decof2
 
 after_success:
   - cd ..
   - coveralls --include src --include include --gcov=gcov-4.9 --gcov-options '\-lp'
+
