--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
 
 after_success:
   - cd ..
-  - coveralls --include src --include include --gcov=gcov-4.9 --gcov-options '\-lp'
+  - coveralls --include src --include include --gcov-options '\-lp'
 
