--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,7 +1,5 @@
-include_directories(${CMAKE_SOURCE_DIR}/src)
-
 add_executable(
-    example
+    decof2-example
     EXCLUDE_FROM_ALL
     main.cpp
     composite.cpp
@@ -9,7 +7,7 @@ add_executable(
 )
 
 target_link_libraries(
-    example
+    decof2-example
     decof2-asio-tick
     decof2-cli
     decof2-scgi
@@ -17,7 +15,7 @@ target_link_libraries(
 
 if(CMAKE_COMPILER_IS_GNUCXX)
 	target_link_libraries(
-		example
+        decof2-example
 		pthread
 	)
 endif()
