--- a/src/scgi/CMakeLists.txt
+++ b/src/scgi/CMakeLists.txt
@@ -4,14 +4,11 @@ set(
     bencode_string_parser.cpp
     bencode_string_parser.h
     scgi_context.cpp
-    scgi_context.h
     endian.h
     js_value_encoder.cpp
     js_value_encoder.h
     response.cpp
-    response.h
     request_parser.cpp
-    request_parser.h
     xml_visitor.cpp
     xml_visitor.h
 )
@@ -26,10 +23,7 @@ target_include_directories(
     decof2-scgi
     PUBLIC
         ${Boost_INCLUDE_DIR}
-        ../../include
-        ../../include/decof
-    PRIVATE
-        ../core
+        ${PROJECT_SOURCE_DIR}/include/
 )
 target_link_libraries(
     decof2-scgi
@@ -47,10 +41,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 		decof2-scgi-gcov
 		PUBLIC
 			${Boost_INCLUDE_DIR}
-			../../include
-			../../include/decof
-		PRIVATE
-			../core
+            ${PROJECT_SOURCE_DIR}/include/
 	)
 	target_link_libraries(
 		decof2-scgi-gcov
