--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - mkdir build && cd build
 
 script:
-  - cmake .. && make -j`nproc` example test_decof2 && test/test_decof2
+  - cmake .. && make -j`nproc` decof2-example decof2-test && test/decof2-test
 
 after_success:
   - cd ..
