--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -15,13 +15,10 @@ set(
     parser.ih
     parser_includes.h
     clisrv_context.cpp
-    clisrv_context.h
     encoder.cpp
     encoder.h
     pubsub_context.cpp
-    pubsub_context.h
     update_container.cpp
-    update_container.h
     visitor.cpp
     visitor.h
     scanner.h
@@ -38,10 +35,7 @@ target_include_directories(
     decof2-cli
     PUBLIC
         ${Boost_INCLUDE_DIR}
-        ../../include
-        ../../include/decof
-    PRIVATE
-        ../core
+        ${PROJECT_SOURCE_DIR}/include/
 )
 target_link_libraries(
     decof2-cli
@@ -59,10 +53,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 		decof2-cli
 		PUBLIC
 			${Boost_INCLUDE_DIR}
-			../../include
-			../../include/decof
-		PRIVATE
-			../core
+            ${PROJECT_SOURCE_DIR}/include/
 	)
 	target_link_libraries(
 		decof2-cli-gcov
