Added support to change userlevel in CLI pub/sub context.

--- a/include/decof/cli/CMakeLists.txt
+++ b/include/decof/cli/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_custom_target(
     decof2-cli-headers
     SOURCES
+        cli_context_base.h
         clisrv_context.h
         pubsub_context.h
         update_container.h
