Modified string encoding in CLI from HTML to C backslash encoding.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -16,7 +16,11 @@ endif()
 
 set(
     DECOF2_CLI_SRC
+    scanner.flexc++
+    grammar.bisonc++
     cli_context_base.cpp
+    decoder.cpp
+    decoder.h
     lex.cpp
     parse.cpp
     parser.h
