Renamed class tcp_connection_manager to generic_tcp_server as it does not manage any connections.

--- a/include/decof/client_context/CMakeLists.txt
+++ b/include/decof/client_context/CMakeLists.txt
@@ -4,5 +4,5 @@ add_custom_target(
         basic_value_encoder.h
         client_context.h
         object_visitor.h
-        tcp_connection_manager.h
+        generic_tcp_server.h
 )
