--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -9,7 +9,7 @@ set(
     object.cpp
     object_dictionary.cpp
     object_visitor.cpp
-    tcp_connection_manager.cpp
+    generic_tcp_server.cpp
 )
 
 # Standard DeCoF2 core library
