--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ compiler:
 
 before_install:
   - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test # for g++ >= 4.9
   - sudo apt-get update
 
 install:
-  - sudo apt-get install g++ libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake python-pip
+  - sudo apt-get install g++-4.9 libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake python-pip
   - sudo pip install cpp-coveralls
 
 before_script:
