--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ compiler:
 
 before_install:
   - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test # for g++ >= 4.9
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # for g++ >= 4.9
   - sudo apt-get update
 
 install:
