--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 
 install:
   - sudo apt-get install g++-4.9 libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake python-pip
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
   - sudo pip install cpp-coveralls
 
 before_script:
