--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,7 @@ add_subdirectory(asio_tick)
 add_subdirectory(cli)
 add_subdirectory(core)
 add_subdirectory(scgi)
-add_subdirectory(websocket)
+
+if (DECOF2_WEBSOCKET)
+    add_subdirectory(websocket)
+endif()
