Added JSON-RPC request parser based on RapidJSON.

--- a/src/websocket/CMakeLists.txt
+++ b/src/websocket/CMakeLists.txt
@@ -1,6 +1,6 @@
-# Download and install the Beast library
 include(ExternalProject)
 
+# Download and install the Beast library
 ExternalProject_Add(
     decof2-libbeast
     URL "https://github.com/vinniefalco/Beast/archive/9f10b11eff58aeb793b673c8a8cb6e2bee3db621.tar.gz"
@@ -14,8 +14,23 @@ ExternalProject_Get_Property(decof2-libbeast SOURCE_DIR)
 
 set(Beast_INCLUDE_DIR ${SOURCE_DIR}/include)
 
+# Download and install the RapidJSON library
+ExternalProject_Add(
+    decof2-rapidjson
+    URL "https://github.com/miloyip/rapidjson/archive/v1.1.0.tar.gz"
+    URL_MD5 "badd12c511e081fec6c89c43a7027bce"
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND ""
+    INSTALL_COMMAND ""
+)
+
+ExternalProject_Get_Property(decof2-rapidjson SOURCE_DIR)
+
+set(RapidJSON_INCLUDE_DIR ${SOURCE_DIR}/include)
+
 set(
     DECOF2_WEBSOCKET_SRC
+    request.h
     websocket_context.cpp
 )
 
@@ -30,6 +45,7 @@ target_include_directories(
     PUBLIC
         ${Boost_INCLUDE_DIR}
         ${Beast_INCLUDE_DIR}
+        ${RapidJSON_INCLUDE_DIR}
         ${PROJECT_SOURCE_DIR}/include/
 )
 target_link_libraries(
@@ -39,6 +55,7 @@ target_link_libraries(
 add_dependencies(
     decof2-websocket
     decof2-libbeast
+    decof2-rapidjson
 )
 
 # DeCoF2 WebSocket library with coverage information
@@ -53,10 +70,16 @@ if(CMAKE_COMPILER_IS_GNUCXX)
         PUBLIC
             ${Boost_INCLUDE_DIR}
             ${Beast_INCLUDE_DIR}
+            ${RapidJSON_INCLUDE_DIR}
             ${PROJECT_SOURCE_DIR}/include/
     )
     target_link_libraries(
         decof2-websocket-gcov
         decof2-core-gcov
+    )
+    add_dependencies(
+        decof2-websocket-gcov
+        decof2-libbeast
+        decof2-rapidjson
     )
 endif()
